--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
                 <img class="w-[900px] h-[600px]" src="../publick/image/roket.png" alt="">
             </div>
         </div>
-        <div>haii</div>
+        <div>i</div>
     </div>
 
     <script>
